--- a/src/main/resources/lang/I18n_vi_VN.properties
+++ b/src/main/resources/lang/I18n_vi_VN.properties
@@ -7,19 +7,19 @@ redo=Làm lại
 reset=Cài lại
 lock=Khóa máy tính
 hide_show_window=Chuyển đổi chế độ hiển thị cửa sổ
-angle=Angle
-error=Error
-basic=Basic
-detailed=Detailed
+angle=Góc
+error=Lỗi
+basic=Cơ bản
+detailed=Chi tiết
 chunk=Chunk
-small=Small
-medium=Medium
-large=Large
-settings=Settings
-settings.show_nether_coordinates=Show nether coordinates
-settings.show_angle_updates=Show direction to stronghold
-settings.auto_reset=Auto reset when idle for 15 minutes
-settings.auto_reset_when_world_is_reset=Auto reset when the active Minecraft world is reset
+small=Nhỏ
+medium=Vừa
+large=Lớn
+settings=Cài đặt
+settings.show_nether_coordinates=Hiển thị tọa độ nether
+settings.show_angle_updates=Hiển thị hướng tới stronghold
+settings.auto_reset=Tự động reset khi không hoạt động trong 15 phút
+settings.auto_reset_when_world_is_reset=Tự động reset khi thế giới Minecraft đang hoạt động được reset
 settings.always_on_top=Always on top
 settings.translucent_window=Translucent window
 settings.notify_when_a_new_version_is_available=Notify when a new version is available
