--- a/src/main/resources/lang/I18n_vi_VN.properties
+++ b/src/main/resources/lang/I18n_vi_VN.properties
@@ -20,12 +20,12 @@ settings.show_nether_coordinates=Hiển thị tọa độ nether
 settings.show_angle_updates=Hiển thị hướng tới stronghold
 settings.auto_reset=Tự động reset khi không hoạt động trong 15 phút
 settings.auto_reset_when_world_is_reset=Tự động reset khi thế giới Minecraft đang hoạt động được reset
-settings.always_on_top=Always on top
-settings.translucent_window=Translucent window
-settings.notify_when_a_new_version_is_available=Notify when a new version is available
-settings.display_stronghold_location_using=Display stronghold location using
-settings.view_type=View type
-settings.theme=Theme
+settings.always_on_top=Luôn trên đầu
+settings.translucent_window=Cửa sổ mờ
+settings.notify_when_a_new_version_is_available=Thông báo khi có phiên bản mới
+settings.display_stronghold_location_using=Hiển thị vị trí stronghold bằng cách sử dụng
+settings.view_type=Kiểu xem
+settings.theme=Chủ đề
 settings.window_size=Window size
 settings.optional_features=Optional features
 settings.all_advancements=All advancements
