--- a/src/main/resources/lang/I18n_vi_VN.properties
+++ b/src/main/resources/lang/I18n_vi_VN.properties
@@ -34,18 +34,26 @@ settings.all_advancements.spawn_coords=Spawn/shulker, press F3+C at spawn (x and
 settings.all_advancements.monument_coords=Monument, press F3+C while underwater (y less than 63).
 settings.all_advancements.outpost_coords=Outpost, look at the center of the outpost and press F3+C. The bot will approximate the location of the outpost based on where you are looking.
 settings.enable_all_advancements_mode=Enable all advancements mode
+settings.all_advancements.switch_type=Enable 1.20+ all advancements mode
 settings.all_advancements.switch_type=Switch to all advancements mode when
 settings.all_advancements.automatic=Entering end (Windows only)
 settings.all_advancements.hotkey=Pressing hotkey
 settings.all_advancements.toggle_aa_mode_hotkey=Toggle all advancements mode hotkey
-settings.standard_deviation=Standard deviation:
+settings.boat_eye.default_boat_type=Default boat mode (requires restart for changes to take effect):
+settings.boat_eye.gray_boat=Gray boat
+settings.boat_eye.blue_boat=Blue boat
+settings.boat_eye.green_boat=Green boat (with a boat angle of 0)
+settings.boat_eye.mod_360=Indicate angle reduction mod 360 on next F3+C
+settings.standard_deviation=Standard deviation (1.13+):
 settings.standard_deviation_manual=Standard deviation (1.9-1.12):
-settings.calibrate_standard_deviation=Calibrate standard deviation
+settings.calibrate_standard_deviation=Calibrate standard deviation (1.13+)
+settings.calibrate_standard_deviation_manual=Calibrate standard deviation (1.9-1.12)
 settings.enable_standard_deviation_toggle=Enable standard deviation toggle
 settings.alt_standard_deviation=Alt. standard deviation:
 settings.alt_std_on_last_angle=Alt. std on last angle:
 settings.crosshair_correction=Crosshair correction:
 settings.show_angle_errors=Show angle errors
+settings.color_negative_coords=Display negative coords in a different color
 settings.use_advanced_stronghold_statistics=Use advanced stronghold statistics
 settings.use_alternative_clipboard_reader=Use alternative clipboard reader
 settings.tall_resolution=Tall resolution
@@ -74,7 +82,17 @@ settings.mc_version.2=1.19+
 settings.basic=Basic
 settings.advanced=Advanced
 settings.general=General
-settings.high_precision=High precision
+settings.boat_eye=Boat measurement
+settings.angle_adjustment=Angle adjustment
+settings.angle_adjustment.adjustment_type=Pixel adjustment type:
+#\u00B1 is the plus or minus symbol
+settings.angle_adjustment.subpixel=Subpixel (\u00B10.01)
+settings.angle_adjustment.tall_resolution=Tall resolution
+settings.angle_adjustment.custom_adjustment=Custom adjustment
+settings.angle_adjustment.custom_amount=Custom adjustment amount:
+settings.angle_adjustment.display_type=Adjustment display type:
+settings.angle_adjustment.angle_change=Angle change
+settings.angle_adjustment.increments=Number of adjustments
 settings.themeeditor.hex_colon=Hex:
 settings.theme.createNew=Create new theme
 settings.theme.defaultThemes=Default themes
@@ -100,6 +118,8 @@ settings.information.enable_mismeasure_warning=Show a warning if the calculator 
 settings.information.enable_portal_linking_warning=Show a warning if you cannot nether travel into the stronghold because of portal linking.
 settings.information.enable_combined_certainty_information=Show an info message if it is possible to nether travel between two offsets for an increased chance of hitting the stronghold.
 settings.information.enable_direction_help_information=Show an info message telling you how many blocks sideways you need to move for your next throw to get around 95%% certainty.
+settings.enable_api=Enable API (starts HTTP server)
+settings.save_state=Save state between sessions
 information.wrong_mc_version=Detected wrong Minecraft version, make sure the correct version is chosen in the settings.
 information.mismeasure=Detected unusually large errors, you probably mismeasured or your standard deviation is too low.
 information.portal_linking=You might not be able to nether travel into the stronghold due to portal linking.
@@ -107,11 +127,16 @@ information.top_two_chunks_are_neighboring=Nether coords (%d, %d) have <span sty
 information.go_left_x_block_or_right_y_blocks=Go left %d blocks, or right %d blocks, for ~95%% certainty after next measurement.
 calibrator.you_moved=Ignoring last throw because you moved.
 calibrator.command_label=Make sure your 'Open Command' key in Minecraft is set to K. Make a creative world, and then press F3+C.
+calibrator.command_label_manual=Make sure your 'Open Command' key in Minecraft is set to K. Make a creative world, type your x, z, and horizontal angle in chat (e.g. '230 -87 124.6'), and then copy it to your clipboard.
 calibrator.throw_label=Throw an ender eye and measure the angle with F3+C. Be as accurate as you would be in a real run. Upon pressing F3+C you will be automatically teleported to a new location.
+calibrator.throw_label_manual=Throw an ender eye and measure the angle by copying your x, z, and horizontal angle. Be as accurate as you would be in a real run. Upon copying your position and angle you will be automatically teleported to a new location.
 calibrator.measure_label=Keep measuring eyes until the measured STD has settled (usually takes around 10-20 throws), then press 'Done' to apply.
-calibrator.title=Calibration
+calibrator.title=Calibration (1.13+)
+calibrator.title_manual=Calibration (1.9-1.12)
+calibrator.title_boat=Calibration (boat throws)
 calibrator.explanation=The program will determine how accurate you are at measuring ender eyes. The lower the standard deviation (STD) is, the more accurate you are. By knowing what your STD is the calculator can make better predictions.
 calibrator.l1=Measured STD:
+calibrator.confidence_interval=75%% Confidence Interval:
 calibrator.done=Done
 notificationsframe.new_version_available=New version available!
 notificationsframe.download_button=Download .jar
