--- a/src/main/resources/lang/I18n_vi_VN.properties
+++ b/src/main/resources/lang/I18n_vi_VN.properties
@@ -34,7 +34,7 @@ settings.all_advancements.spawn_coords=Spawn/shulker, press F3+C at spawn (x and
 settings.all_advancements.monument_coords=Monument, press F3+C while underwater (y less than 63).
 settings.all_advancements.outpost_coords=Outpost, look at the center of the outpost and press F3+C. The bot will approximate the location of the outpost based on where you are looking.
 settings.enable_all_advancements_mode=Enable all advancements mode
-settings.all_advancements.switch_type=Enable 1.20+ all advancements mode
+settings.enable_120plus_all_advancements_mode=Enable 1.20+ all advancements mode
 settings.all_advancements.switch_type=Switch to all advancements mode when
 settings.all_advancements.automatic=Entering end (Windows only)
 settings.all_advancements.hotkey=Pressing hotkey
@@ -56,13 +56,13 @@ settings.show_angle_errors=Show angle errors
 settings.color_negative_coords=Display negative coords in a different color
 settings.use_advanced_stronghold_statistics=Use advanced stronghold statistics
 settings.use_alternative_clipboard_reader=Use alternative clipboard reader
-settings.tall_resolution=Tall resolution
 settings.tall_resolution_explanation=Makes subpixel adjustment hotkeys work with tall resolution. Instead of adding or subtracting 0.01 from the angle, the angle will be changed by 1 pixel for each adjustment. E.g. if your crosshair is off by 4 pixels, you can correct the angle by pressing the corresponding subpixel adjustment hotkey 4 times. If your crosshair is too far left use the + adjustment, and vice versa.
 settings.resolution_height=Resolution height: 
 settings.use_precise_angle=Enable boat measurements
-settings.sensitivity=Sensitivity (from options.txt):
+settings.sensitivityManual=Sensitivity 1.9-1.12 (from options.txt):
+settings.sensitivityAutomatic=Sensitivity 1.13+ (from options.txt):
 settings.boat_error=Allowable boat angle error:
-settings.boat_standard_deviation=Standard deviation for boat throws
+settings.boat_standard_deviation=Standard deviation for boat throws:
 settings.keyboard_shortcuts=Hotkeys
 settings.up_001_to_last_angle=Change the last angle by +0.01
 settings.down_001_to_last_angle=Change the last angle by -0.01
@@ -142,11 +142,11 @@ notificationsframe.new_version_available=New version available!
 notificationsframe.download_button=Download .jar
 notificationsframe.changelog_button=Open changelog (in browser)
 notificationsframe.update_text=Version %s is available. After downloading the new jar you can delete this jar (your settings will automatically transfer). This notification can be disabled in the settings menu.
-location_blocks=Location: (%d, %d), %d blocks away 
-chunk_blocks=Chunk: (%d, %d), %d blocks away 
+location_blocks=Location: %s, %d blocks away 
+chunk_blocks=Chunk: %s, %d blocks away 
 certainty=Certainty: 
 current_angle=Current angle
-nether_coordinates=Nether coords: (%d, %d), %d blocks away
+nether_coordinates=Nether coords: %s, %d blocks away
 could_not_determine=Could not determine the stronghold chunk.
 you_probably_misread=You probably misread one of the eyes.
 blind_coords=Blind coords (%.0f, %.0f) are 
