--- a/src/main/resources/lang/I18n_vi_VN.properties
+++ b/src/main/resources/lang/I18n_vi_VN.properties
@@ -23,12 +23,12 @@ settings.auto_reset_when_world_is_reset=Tự động reset khi thế giới Mine
 settings.always_on_top=Luôn trên đầu
 settings.translucent_window=Cửa sổ mờ
 settings.notify_when_a_new_version_is_available=Thông báo khi có phiên bản mới
-settings.display_stronghold_location_using=Hiển thị vị trí stronghold bằng cách sử dụng
+settings.display_stronghold_location_using=Hiển thị vị trí stronghold bằng
 settings.view_type=Kiểu xem
 settings.theme=Chủ đề
-settings.window_size=Window size
-settings.optional_features=Optional features
-settings.all_advancements=All advancements
+settings.window_size=Kích thước cửa sổ
+settings.optional_features=Tính năng tuỳ chọn
+settings.all_advancements=Tất cả thành tựu
 settings.all_advancements.explanation=Allows you to save coordinates of structures after the any%% split. You can save:
 settings.all_advancements.spawn_coords=Spawn/shulker, press F3+C at spawn (x and z less than 300) while standing on the ground.
 settings.all_advancements.monument_coords=Monument, press F3+C while underwater (y less than 63).
